--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,16 @@ body {
   color: #2a2a2a;
 }
 
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: "Source Code Pro", sans-serif;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: 700;
 }
 
@@ -28,7 +33,9 @@ h1, h2 {
   text-transform: uppercase;
 }
 
-h3, h4, h5 {
+h3,
+h4,
+h5 {
   font-weight: 600;
 }
 
@@ -60,177 +67,77 @@ p {
   margin: auto;
 }
 
-.contributors {
-  padding: 80px 0;
-  color: #fff;
-  background: #332880;
-  background: linear-gradient(90deg, rgba(37, 29, 92, 0.9) 0%, rgba(151, 138, 208, 0.8) 100%);
-}
-.contributors p {
-  width: 80%;
-  margin: auto;
-}
-
-header h1 {
-  margin-bottom: 0;
-}
-
-main {
-  width: 100%;
-  margin: auto;
-}
-
-.home-page section:nth-child(1) {
-  background: #fff;
-}
-
-/* desktop 3rd color: #dec49e */
-img {
-  width: 100%;
-}
-
-header.branding #logo {
-  width: 140px;
-  padding: 0 0 0 20px;
-  margin-top: -18px;
-}
-
-a.button.pink, button.button.pink {
-  border-color: #fff;
-  background-color: #fff;
-  color: #FF3464;
-}
-
-a.button.pink:hover, button.button.pink:hover {
-  border-color: #fff;
-  background-color: #FF3464;
-  color: #fff;
-}
-
-.wlf {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 1em;
-}
-.wlf .button {
-  margin-top: 1rem;
-}
-
-.wlf-link {
-  background-image: url("../wlf2020/images/banner.jpg");
-  background-size: cover;
-  background-position: bottom;
-  padding: 4em 0;
-}
-.wlf-link div {
-  width: 90%;
-  margin: auto;
-}
-.wlf-link h2 {
-  margin-bottom: 0;
-  font-size: 2.2em;
-  color: #fff;
-}
-.wlf-link h3 {
-  margin-top: 0.3em;
-  color: #fff;
-  font-size: 32px;
-}
-.wlf-link p {
-  color: #fff;
-  font-size: 24px;
-  line-height: 32px;
-}
-.wlf-link .button {
-  border-color: #fff;
-  color: #fff;
-}
-
-.bang {
-  position: absolute;
-  top: -80px;
-  left: -80px;
-  width: 440px;
-  z-index: -1;
-  opacity: 0.1;
-}
-
-h2.tagline {
-  margin-top: 1em;
-}
-
-a {
-  color: #00877E;
-  font-weight: bold;
-}
-a :hover {
-  color: #fd9200;
-}
-
-.button {
-  color: #E5450A;
-  border: 1px solid #E5450A;
-  padding: 10px 16px;
-  text-decoration: none;
-  display: inline-block;
-  margin-top: 0;
-}
-
-.button:hover {
-  border-color: #E5450A;
-  background: #E5450A;
-  color: #fff;
-}
-
-.events {
-  background: #fff;
-  padding: 80px;
-}
-
-.events .title {
-  grid-column: 1/-1;
-}
-
-.events .grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  width: 80%;
-  margin: auto;
-}
-
-.events h4 {
-  border-bottom: 4px solid #666;
-  padding-bottom: 10px;
-  margin-bottom: 0;
-  display: inline-block;
-}
-
-#subscribe-form {
-  width: 80%;
-  margin: auto;
-}
-
-.cta {
-  text-align: left;
-  margin-top: 40px;
-}
-.cta h3 {
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
-}
-
-.center {
-  text-align: center;
-}
-
-/* START of Mobile Menu */
-.nav, .desktop {
-  display: block;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
+/*| Navigation Two. replace old nav after testing |*/
+.navtwo {
   z-index: 900;
+  justify-content: flex-end;
+  display: none;
+}
+
+.navtwo ul {
+  list-style: none;
+  position: relative;
+  display: flex;
+}
+
+.navtwo ul li {
+  transition: all 0.2s ease-in-out;
+}
+
+.navtwo ul ul li a:hover {
+  color: #e5450a;
+}
+
+.navtwo ul li:hover > ul {
+  display: block;
+}
+
+.navtwo ul li {
+  transition: all 0.2s ease-in-out;
+}
+
+.navtwo ul li a {
+  display: block;
+  font-size: 24px;
+  padding: 10px 20px 15px 20px;
+  color: #555;
+  text-decoration: none;
+}
+
+.navtwo ul li a:hover {
+  color: #e5450a;
+}
+
+.navtwo ul ul {
+  display: none;
+  background: #fff;
+  position: absolute;
+  top: 100%;
+}
+
+.navtwo ul ul li {
+  position: relative;
+  margin-left: -40px;
+}
+
+.navtwo ul ul li a {
+  padding: 15px 30px;
+  border: 1px solid #e5450a;
+  border-bottom: none;
+}
+
+.navtwo ul ul li:last-child a {
+  border-bottom: 1px solid #e5450a;
+}
+
+.navtwo ul ul ul {
+  position: absolute;
+  left: 100%;
+  top: 0;
+}
+
+.navmobile {
+  display: block;
 }
 
 .icon {
@@ -294,48 +201,344 @@ a :hover {
   transform: rotate(135deg);
 }
 
-.menu-mobile {
-  background-color: #efefef;
-  height: 100vh;
-  position: fixed;
+/* END Nav Two */
+.contributors {
+  padding: 80px 0;
+  color: #fff;
+  background: #332880;
+  background: linear-gradient(90deg, rgba(37, 29, 92, 0.9) 0%, rgba(151, 138, 208, 0.8) 100%);
+}
+.contributors p {
+  width: 80%;
+  margin: auto;
+}
+
+header {
+  display: flex;
+  width: 100vw;
+  justify-content: space-between;
+}
+
+header h1 {
+  margin-bottom: 0;
+}
+
+main {
   width: 100%;
-  z-index: 999;
-  padding-top: 150px;
-  font-family: "Helvetica", sans-serif;
+  margin: auto;
+}
+
+.home-page section:nth-child(1) {
+  background: #fff;
+}
+
+/* desktop 3rd color: #dec49e */
+img {
+  width: 100%;
+}
+
+header.branding #logo {
+  width: 140px;
+  padding: 0 0 0 20px;
+  margin-top: -18px;
+}
+
+a.button.pink,
+button.button.pink {
+  border-color: #fff;
+  background-color: #fff;
+  color: #ff3464;
+}
+
+a.button.pink:hover,
+button.button.pink:hover {
+  border-color: #fff;
+  background-color: #ff3464;
+  color: #fff;
+}
+
+a.button.gray,
+button.button.gray {
+  border-color: #e5450a;
+  background-color: #fff;
+  color: #e5450a;
+}
+
+a.button.gray:hover,
+button.button.gray:hover {
+  border-color: #fff;
+  background-color: #e5450a;
+  color: #fff;
+}
+
+a.btn.light, button.btn.light {
+  border-color: #D81E4A;
+  color: #D81E4A;
+  background-color: #fff;
+}
+
+a.btn.light:hover, button.btn.light:hover {
+  border-color: #fff;
+  color: #fff;
+  background-color: #D81E4A;
+}
+
+.wlf {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 1em;
+}
+.wlf .button {
+  margin-top: 1rem;
+}
+
+.wlf-link {
+  background-image: url("../wlf2020/images/banner.jpg");
+  background-size: cover;
+  background-position: bottom;
+  padding: 4em 0;
+}
+.wlf-link div {
+  width: 90%;
+  margin: auto;
+}
+.wlf-link h2 {
+  margin-bottom: 0;
+  font-size: 2.2em;
+  color: #fff;
+}
+.wlf-link h3 {
+  margin-top: 0.3em;
+  color: #fff;
+  font-size: 32px;
+}
+.wlf-link p {
+  color: #fff;
+  font-size: 24px;
+  line-height: 32px;
+}
+.wlf-link .button {
+  border-color: #fff;
+  color: #fff;
+}
+
+.bang {
+  position: absolute;
+  top: -80px;
+  left: -80px;
+  width: 440px;
+  z-index: -1;
+  opacity: 0.1;
+}
+
+h2.tagline {
+  margin-top: 1em;
+}
+
+a {
+  color: #00877e;
+  font-weight: bold;
+}
+a :hover {
+  color: #fd9200;
+}
+
+.button {
+  color: #e5450a;
+  border: 1px solid #e5450a;
+  padding: 10px 16px;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 0;
+}
+
+.button:hover {
+  border-color: #e5450a;
+  background: #e5450a;
+  color: #fff;
+}
+
+.events {
+  background: #fff;
+  padding: 80px;
+}
+
+.events .title {
+  grid-column: 1/-1;
+}
+
+.events .grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 80%;
+  margin: auto;
+}
+
+.events h4 {
+  border-bottom: 4px solid #666;
+  padding-bottom: 10px;
+  margin-bottom: 0;
+  display: inline-block;
+}
+
+#subscribe-form {
+  width: 80%;
+  margin: auto;
+}
+
+.cta {
+  text-align: left;
+  margin-top: 40px;
+}
+.cta h3 {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.center {
   text-align: center;
 }
 
-.menu-mobile, .menu-mobile a {
+.device-page .nav,
+.device-page .desktop {
+  display: block;
+  position: static;
+  width: 100%;
+  z-index: 900;
+}
+
+.device-page .nav {
+  display: none;
+}
+
+/* START of Mobile Menu */
+.nav,
+.desktop {
+  display: block;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  z-index: 900;
+}
+
+.icon {
+  position: fixed;
+  cursor: pointer;
+  top: 30px;
+  right: 0%;
+  width: 40px;
+  height: 45px;
+  transform: translate(-50%, -50%);
+  display: block;
+  z-index: 1000;
+}
+
+.hamburger {
+  width: 40px;
+  height: 4px;
+  line-height: 70px;
+  background: #666;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.hamburger:before,
+.hamburger:after {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 4px;
+  background: #666;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+
+.hamburger:before {
+  top: -10px;
+}
+
+.hamburger:after {
+  top: 10px;
+}
+
+.icon.active .hamburger {
+  background: rgba(0, 0, 0, 0);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
+}
+
+.icon.active .hamburger:before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+.icon.active .hamburger:after {
+  top: 0;
+  transform: rotate(135deg);
+}
+
+.menu-mobile {
+  background-color: #fff;
+  border: 1px solid #e5450a;
+  position: fixed;
+  right: 0;
+  z-index: 999;
+  padding-top: 20px;
+  font-family: "Source Sans Pro", sans-serif;
+  text-align: center;
+}
+
+.menu-mobile,
+.menu-mobile a {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  border-bottom: 1px solid #e5450a;
 }
 
 .menu-mobile a {
   clear: right;
   text-decoration: none;
-  color: #333;
+  color: #555;
+  padding: 0 90px;
   height: 70px;
   line-height: 70px;
 }
 
 .menu-mobile a:hover {
-  color: #fd9200;
+  color: #e5450a;
 }
 
-.desktop, .menu-desktop, .menu-mobile {
+.desktop,
+.menu-desktop,
+.menu-mobile {
   display: none;
-}
-
-.menu-desktop {
-  font-weight: 600;
-  font-size: 20px;
+  margin-top: 0px;
 }
 
 footer {
-  background-color: #333;
+  background-color: #505555;
   padding: 60px;
   color: #fff;
+}
+
+footer svg {
+  background-color: #fff;
+  fill: #e5450a;
+  color: #e5450a;
+  padding: 6px;
+  margin-right: 1.6rem;
+}
+
+footer svg:hover {
+  fill: #fff;
+  background-color: #e5450a;
 }
 
 footer div {
@@ -380,7 +583,7 @@ footer div {
   width: 150px;
   opacity: 0;
   transition: 0.5s ease;
-  background-color: #00877E;
+  background-color: #00877e;
   border-radius: 50%;
 }
 .people .person:hover .overlay {
@@ -421,24 +624,28 @@ footer div {
 }
 
 section.gof {
-  background-color: #FF3464;
+  background-color: #ff3464;
   color: #fff;
 }
 
-section.gof h1, section.gof h2, section.gof h3, section.gof h4, section.gof p {
+section.gof h1,
+section.gof h2,
+section.gof h3,
+section.gof h4,
+section.gof p {
   color: #fff;
 }
 
 section.gof nav {
-  background-color: #F7E332;
+  background-color: #f7e332;
 }
 
 section.gof nav a {
-  color: #D81E4A;
+  color: #d81e4a;
 }
 
 section.gof nav a:hover {
-  color: #E5450A;
+  color: #e5450a;
 }
 
 section.gof div {
@@ -451,6 +658,31 @@ section.gof figure {
   margin: 0;
 }
 
+section.events {
+  background: #99adad;
+  color: #fff;
+}
+
+section.events img {
+  width: 100vw;
+  padding: 0;
+  margin: 0;
+}
+
+section.events div {
+  padding: 60px 0;
+  width: 70%;
+  margin: auto;
+}
+
+section.events div.title {
+  width: 90%;
+}
+
+.mozfest-postcard {
+  margin-bottom: -20px;
+}
+
 /* MAILCHIMP STYLES */
 #mc_embed_signup {
   background: #fff;
@@ -461,6 +693,14 @@ section.gof figure {
 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block. */
 @media only screen and (min-width: 768px) {
   .mobile-only {
+    display: none;
+  }
+
+  .navtwo {
+    display: block;
+  }
+
+  .navmobile {
     display: none;
   }
 
@@ -512,6 +752,18 @@ section.gof figure {
     margin-bottom: 0.8rem;
   }
 
+  .device-page .menu-desktop {
+    width: 100%;
+    display: block;
+    padding: 0;
+    line-height: 50px;
+    height: auto;
+    justify-content: space-evenly;
+    flex-direction: row;
+    text-align: right;
+    background: #2e4ddf;
+  }
+
   .menu-desktop {
     width: 100%;
     display: block;
@@ -526,6 +778,10 @@ section.gof figure {
     right: 0;
   }
 
+  .device-page .menu-desktop {
+    position: static;
+  }
+
   .menu-desktop a {
     display: inline-flex;
     margin-right: 30px;
@@ -537,7 +793,7 @@ section.gof figure {
   }
 
   .menu-desktop a:hover {
-    color: #E5450A;
+    color: #e5450a;
   }
 
   .desktop {
@@ -547,7 +803,7 @@ section.gof figure {
     display: block;
   }
 
-  nav.nav, .menu-mobile {
+  nav.nav {
     display: none;
   }
 
