--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ p {
   background-image: url("../images/backgrounds/skyline-mobile.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 20px;
+  background-position: 75% 50%;
   height: 300px;
   margin-top: -64px;
 }
@@ -371,6 +371,7 @@ footer div {
   grid-gap: 1em;
   margin: 80px 40px;
 }
+
 .people .section-head {
   grid-column: 1 / -1;
 }
@@ -487,7 +488,7 @@ section.gof figure {
 
   .hero {
     background-image: url("../images/backgrounds/skyline.png");
-    background-position: 0 0;
+    background-position: 0 20px;
   }
 
   header.branding {
