--- a/css/main.scss
+++ b/css/main.scss
@@ -59,7 +59,7 @@ p {
   background-image: url("../images/heros/home-wft20.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 20px;
+  background-position: 75% 50%;
   height: 300px;
 }
 .about {
@@ -272,15 +272,17 @@ button.button.gray:hover {
   background-color: #e5450a;
   color: #fff;
 }
-a.btn.light, button.btn.light {
-  border-color: #D81E4A;
-  color: #D81E4A;
+a.btn.light,
+button.btn.light {
+  border-color: #d81e4a;
+  color: #d81e4a;
   background-color: #fff;
 }
-a.btn.light:hover, button.btn.light:hover {
+a.btn.light:hover,
+button.btn.light:hover {
   border-color: #fff;
   color: #fff;
-  background-color: #D81E4A;
+  background-color: #d81e4a;
 }
 .wlf {
   display: grid;
@@ -691,7 +693,7 @@ section.events div.title {
   }
   .hero {
     background-image: url("../images/heros/home-wft20.png");
-    background-position: 0 0;
+    background-position: 0 20px;
   }
   header.branding {
     grid-template-columns: 1fr 4fr;
