--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ p {
   background-image: url("../images/heros/home-wft20.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 0 20px;
+  background-position: 75% 50%;
   height: 300px;
 }
 
@@ -271,16 +271,18 @@ button.button.gray:hover {
   color: #fff;
 }
 
-a.btn.light, button.btn.light {
-  border-color: #D81E4A;
-  color: #D81E4A;
+a.btn.light,
+button.btn.light {
+  border-color: #d81e4a;
+  color: #d81e4a;
   background-color: #fff;
 }
 
-a.btn.light:hover, button.btn.light:hover {
+a.btn.light:hover,
+button.btn.light:hover {
   border-color: #fff;
   color: #fff;
-  background-color: #D81E4A;
+  background-color: #d81e4a;
 }
 
 .wlf {
@@ -706,7 +708,7 @@ section.events div.title {
 
   .hero {
     background-image: url("../images/heros/home-wft20.png");
-    background-position: 0 0;
+    background-position: 0 20px;
   }
 
   header.branding {
