--- a/css/style-two-oh.css
+++ b/css/style-two-oh.css
@@ -560,7 +560,11 @@ nav a:hover {
   display: none;
   margin-top: 90px;
 }
-
+.get-around {
+  list-style-type: disc;
+  line-height: 28px;
+  margin-left: 48px;
+}
 /* END OF Mobile Menu */
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
