--- a/css/style-two-oh.css
+++ b/css/style-two-oh.css
@@ -565,6 +565,7 @@ nav a:hover {
   line-height: 28px;
   margin-left: 48px;
 }
+.warning {color: #c20202;}
 /* END OF Mobile Menu */
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
