--- a/css/style.css
+++ b/css/style.css
@@ -447,7 +447,8 @@ button.button.gray:hover {
 }
 
 a.btn.light,
-button.btn.light {
+button.btn.light,
+.button.light {
   border-color: #d81e4a;
   color: #d81e4a;
   background-color: #fff;
@@ -815,6 +816,10 @@ footer > div {
   grid-template-columns: 1fr 1fr;
 }
 
+.hackathon__partners_list {
+  list-style-type: none;
+}
+
 /* Text over an images */
 .person-card p.mobile-only {
   text-align: center;
@@ -938,6 +943,32 @@ section.gof div {
 
 section.gof figure {
   margin: 0;
+}
+
+section.constellations {
+  background-color: #382abb;
+}
+section.constellations div {
+  padding: 60px 0;
+  width: 80%;
+  margin: auto;
+}
+section.constellations h1,
+section.constellations h2,
+section.constellations h3,
+section.constellations h4,
+section.constellations p {
+  color: #fff;
+}
+section.constellations .button.light {
+  border-color: #fff;
+  color: #fff;
+  background-color: #382abb;
+}
+section.constellations .button.light:hover {
+  border-color: #382abb;
+  color: #382abb;
+  background-color: #fff;
 }
 
 section.events {
@@ -1128,6 +1159,25 @@ section #subscribe-form div {
 
   .person-page section article.inner {
     width: 80%;
+  }
+
+  .hackathon__partners_list {
+    display: flex;
+    list-style-type: none;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .hackathon__partners_list .stacks {
+    background-color: #000;
+  }
+  .hackathon__partners_list li {
+    flex: 25%;
+    padding: 10px;
+    margin: 16px;
+    border: 1px solid #000;
+  }
+  .hackathon__partners_list .no-bdrd {
+    border: none;
   }
 }
 @media only screen and (min-width: 1024px) {
