added xrchive block to programs

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,10 @@ a {
   background-color: #b7dcb0;
 }
 
+.xr {
+  background-color: #000;
+}
+
 .royal {
   background-color: #2e4ddf;
   color: #fff;
