--- a/css/main.scss
+++ b/css/main.scss
@@ -120,6 +120,9 @@ a {
 .e-tech {
   background-color: #b7dcb0;
 }
+.xr {
+  background-color: #000;
+}
 .royal {
   background-color: $ceti-royal;
   color: #fff;
