added link color to xrchive page

--- a/css/main.scss
+++ b/css/main.scss
@@ -953,7 +953,12 @@ section.constellations {
     background-color: #fff;
   }
 }
-
+#xrchive-page .light a {
+  color: $ceti-orange;
+}
+#xrchive-page .light a:hover {
+  color: $ceti-grey;
+}
 section.events {
   background: #99adad;
   color: #fff;
