added info for dec 3 and 4

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,9 @@ $ceti-royal: #2e4ddf;
 * {
   box-sizing: border-box;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: "Source Sans Pro", sans-serif;
