--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: "Source Sans Pro", sans-serif;
