--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,11 @@ header.branding #logo {
   margin-top: -18px;
 }
 
+strong {
+  display: inline-block;
+  margin-top: 18px;
+}
+
 a.button.pink,
 button.button.pink {
   border-color: #fff;
