--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,24 @@ ul.links-horiz li {
 }
 
 /* END Nav Two */
+/* constellations 22 */
+.wlf22 .participants_list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 1fr;
+  grid-gap: 30px;
+}
+.wlf22 .participants_list li {
+  background: #342ebb;
+  background: linear-gradient(137deg, #342ebb 0%, #7900cc 61%, #0573ad 87%);
+  padding: 50px 30px;
+  color: #fff;
+}
+.wlf22 .participants_list a {
+  color: #fff;
+}
+
+/* end constellations */
 .contributors {
   padding: 80px 0;
   color: #fff;
