added new pink color

--- a/css/main.scss
+++ b/css/main.scss
@@ -401,7 +401,7 @@ ul.links-horiz {
   // grid-auto-rows: 1fr;
   grid-gap: 30px;
   .colorLink {
-    color: $ceti-grey;
+    color: #dd0bed;
     text-decoration: underline;
   }
   .hide {
@@ -416,7 +416,7 @@ ul.links-horiz {
     margin-right: 6px;
   }
   a {
-    color: $ceti-grey;
+    color: #dd0bed;
   }
   a:hover {
     color: $ceti-orange;
