--- a/css/style.css
+++ b/css/style.css
@@ -408,6 +408,48 @@ ul.links-horiz li {
 }
 
 /* END Nav Two */
+.wlf22 .projects_list {
+  margin-bottom: 80px;
+  list-style-type: none;
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+.wlf22 .projects_list .hide {
+  display: none;
+}
+.wlf22 .projects_list img {
+  width: 100%;
+}
+.wlf22 .projects_list .project-cards {
+  overflow: hidden;
+}
+.wlf22 .projects_list .project-info {
+  height: 300px;
+  padding: 40px 20px;
+  width: 300px;
+  color: #fff;
+  background: #e5450a;
+  background: linear-gradient(307deg, #e5450a 0%, #ffe200 37%, #dd0ced 63%);
+}
+.wlf22 .projects_list .project-img {
+  position: relative;
+  height: 300px;
+  width: 300px;
+  background: #e5450a;
+  background: linear-gradient(307deg, #e5450a 0%, #ffe200 37%, #dd0ced 63%);
+}
+.wlf22 .projects_list .proj-title {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+  color: #fff;
+  font-size: 32px;
+  padding: 20px;
+  font-weight: bold;
+}
+
 /* constellations 22 */
 .wlf22 .participants_list {
   margin-bottom: 80px;
