--- a/css/style.css
+++ b/css/style.css
@@ -424,6 +424,10 @@ ul.links-horiz li {
 .wlf22 .projects_list .project-cards {
   overflow: hidden;
 }
+.wlf22 .projects_list a {
+  color: #fff;
+  text-decoration: underline;
+}
 .wlf22 .projects_list .project-info {
   height: 300px;
   padding: 40px 20px;
@@ -1111,6 +1115,88 @@ section.events div.title {
   margin-bottom: -20px;
 }
 
+/* video modal https://codepen.io/ramdje/pen/RXQzVe*/
+.modal-dialog {
+  max-width: 800px;
+  margin: 30px auto;
+}
+
+.modal-body {
+  position: relative;
+  padding: 0px;
+}
+
+.close {
+  position: absolute;
+  right: -30px;
+  top: 0;
+  z-index: 999;
+  font-size: 2rem;
+  font-weight: normal;
+  color: #fff;
+  opacity: 1;
+}
+
+.btn {
+  border-radius: 0;
+  padding: 10px 20px;
+}
+
+.btn-primary {
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #005789;
+  border-color: #005789;
+}
+
+.btn-primary:hover {
+  color: #ffffff;
+  text-transform: uppercase;
+  background-color: #006ca3;
+  border-color: #006ca3;
+}
+
+/* RESPONSIVE BACKGROUND VIDEO */
+.home-resp-video-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  z-index: -1;
+}
+
+.home-resp-video-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.home-resp-video-link {
+  display: block;
+  padding-left: 40px;
+  padding-right: 40px;
+  cursor: pointer;
+}
+
+.home-resp-video-bottom-spacer {
+  min-height: 30px;
+  max-height: 50px;
+}
+
+@media (max-width: 992px) {
+  .home-resp-video-container {
+    padding-top: 56.25%;
+  }
+
+  .home-resp-video-link {
+    display: block;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+/* end video modal */
 /* MAILCHIMP STYLES */
 #mc_embed_signup {
   background: #fff;
